# promptbin

./: AGENTS.md  CLAUDE.md  README.md  app.py  cli.py  flask_manager.py  main.py  mcp_server.py  prompt_manager.py  pyproject.toml  tunnel_manager.py
.github/workflows/: pr-checks.yml
ai_docs/: arch-refactor-di-plan.md  arch-refactor.md
mcp_data/: mcp-server-PromptBin.txt
prompts/coding/: 20250905_233753_3759931c.json
prompts/writing/: .gitignore
src/promptbin/: __init__.py  app.py  cli.py
src/promptbin/core/: config.py  container.py
src/promptbin/managers/: prompt_manager.py  share_manager.py  tunnel_manager.py
src/promptbin/mcp/: server.py
src/promptbin/utils/: __init__.py  build_check.py  flask_manager.py  install_devtunnel.py  setup_checker.py
static/css/: style.css
templates/: base.html  create.html  edit.html  index.html  view.html
templates/partials/: create_content.html  edit_content.html  index_content.html  search_results.html  view_content.html
tests/: test_prompt_manager.py
tests/unit/core/: test_config.py  test_config_integration.py  test_container.py  test_exceptions.py  test_performance.py
